[v9r3-pre11]
use DIRAC v6r20p23

* fix index name
* using the production ID as index name

[v9r3-pre10]
use DIRAC v6r20p22

* using not strings but dicts
* no need for json
* dict no string
* sending a dict, and corrected typeName
* handle case of non existing index
* moved to pytest
* moved to pytest
* return value
* bug fixes
* Fixes for index name
* minor bug fix
* using old version
* just debug
* fix
* setting correctly the binary tag

[v9r3-pre9]
use DIRAC v6r20p22

* fix typos
* restored tests
* fixes
* pip install LbPlatformUtils
* adding functions from base module
* getQueues from vanilla DIRAC module

[v9r2p12]
use DIRAC v6r20p25

* allowing more than 1 type of simulation productions
* fix typos
* fix pylint issues
* make python 3 compatible
* allow to create POOL XML catalog

[v9r3-pre8]
use DIRAC v6r20p21

* hiding for test
* some bug fixes in recognizing compatibility, + unit test
* fix code style
* fix integration test
* fix case when platform is a list
* simplifications
* removed duplicate test
* temporarily removed
* tests updates and corrections
* fix the documentum format
* document how to handle table partitions
* momentarily hide
* avoid import errors on voboxes
* large simplifications
* using LbPlatformUtils for determining the DIRAC platform
* using Resources.getPlatformForJob for determining the DIRAC platform
* added function for getting the DIRAC job platform (requirement) from the list of CMT configs (binary tags)
* remove boinc
* test moved to pytest
* better comments
* just debug

[v9r3-pre7]
use DIRAC v6r20p20

* more pylint fix
* fix pylint
* remove BOINC from tests
* restored lhcb-restart-agent-service.py
* using 'with'
* better error reporting
* better logging
* Docs: add docs about centralized logging
* mostly style
* removed some scripts not useless or not up-to-date-
* minor/pylint

[v9r3-pre6]
use DIRAC v6r20p18

* Once more fix
* Another  BuG fix
* BUG fix for ErrorLogging module
* revert fts3 undue changes