@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r3-pre12
+  {
+    Modules = LHCbDIRAC:v9r3-pre12, LHCbWebDIRAC:v4r5p1
+    Depends = DIRAC:v6r20p25
+    LcgVer = v14r4
+  }
+
   v9r3-pre11
   {
     Modules = LHCbDIRAC:v9r3-pre11, LHCbWebDIRAC:v4r5p1
