@@ -1,3 +1,8 @@
+[v9r3-pre12]
+use DIRAC v6r20p25
+
+* allowing more than 1 type of simulation productions
+
 [v9r3-pre11]
 use DIRAC v6r20p23
 
